--- a/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
+++ b/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
@@ -131,6 +131,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ModelTabangHub.edmx</DependentUpon>
     </Compile>
+    <Compile Include="MyRole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\UserManager.cs" />
@@ -140,7 +141,13 @@
     <Compile Include="UserAccount.cs">
       <DependentUpon>ModelTabangHub.tt</DependentUpon>
     </Compile>
+    <Compile Include="UserRoles.cs">
+      <DependentUpon>ModelTabangHub.tt</DependentUpon>
+    </Compile>
     <Compile Include="Utils\Utilities.cs" />
+    <Compile Include="vw_UserRoles.cs">
+      <DependentUpon>ModelTabangHub.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
