--- a/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
+++ b/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
@@ -94,12 +94,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Css\Style.css" />
+    <Content Include="Content\images\organization.png" />
     <Content Include="Content\images\tabanghub3.png" />
+    <Content Include="Content\images\volunteer.png" />
+    <Content Include="Content\Js\JavaScript.js" />
     <Content Include="Global.asax" />
     <Content Include="ModelTabangHub.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>ModelTabangHub.Context.cs</LastGenOutput>
       <DependentUpon>ModelTabangHub.edmx</DependentUpon>
+      <LastGenOutput>ModelTabangHub.Context.cs</LastGenOutput>
     </Content>
     <Content Include="ModelTabangHub.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -132,6 +136,12 @@
       <DependentUpon>ModelTabangHub.edmx</DependentUpon>
     </Compile>
     <Compile Include="MyRole.cs" />
+    <Compile Include="OrgAccount.cs">
+      <DependentUpon>ModelTabangHub.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OrgId.cs">
+      <DependentUpon>ModelTabangHub.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\UserManager.cs" />
@@ -145,9 +155,6 @@
       <DependentUpon>ModelTabangHub.tt</DependentUpon>
     </Compile>
     <Compile Include="Utils\Utilities.cs" />
-    <Compile Include="vw_UserRoles.cs">
-      <DependentUpon>ModelTabangHub.tt</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -164,6 +171,8 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Page\Login.cshtml" />
     <Content Include="Views\Page\Index.cshtml" />
+    <Content Include="Views\Page\ChooseRegister.cshtml" />
+    <Content Include="Views\Page\RegisterOrg.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
