--- a/Tabang-Hub/Tabang-Hub/bin/Tabang-Hub.dll.config
+++ b/Tabang-Hub/Tabang-Hub/bin/Tabang-Hub.dll.config
@@ -17,16 +17,14 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-	  
-	  <authentication mode="Forms">
-		  <forms loginUrl="/Page/Login"></forms>
-	  </authentication>
-	  <roleManager defaultProvider="MyRole" enabled="true">
-		  <providers>
-			  <add name="MyRole" type="Tabang_Hub.MyRole"/>
-		  </providers>
-	  </roleManager>
-	  
+    <authentication mode="Forms">
+      <forms loginUrl="/Page/Login"></forms>
+    </authentication>
+    <roleManager defaultProvider="MyRole" enabled="true">
+      <providers>
+        <add name="MyRole" type="Tabang_Hub.MyRole" />
+      </providers>
+    </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -55,7 +53,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="TabangHubEntities" connectionString="metadata=res://*/ModelTabangHub.csdl|res://*/ModelTabangHub.ssdl|res://*/ModelTabangHub.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=TabangHub;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TabangHubEntities" connectionString="metadata=res://*/ModelTabangHub.csdl|res://*/ModelTabangHub.ssdl|res://*/ModelTabangHub.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS02;initial catalog=TabangHub;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
