--- a/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
+++ b/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
@@ -147,6 +147,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
+    <Compile Include="Repository\MailManager.cs" />
     <Compile Include="Repository\UserManager.cs" />
     <Compile Include="Role.cs">
       <DependentUpon>ModelTabangHub.tt</DependentUpon>
@@ -185,6 +186,7 @@
     <Content Include="Views\Page\Index.cshtml" />
     <Content Include="Views\Page\ChooseRegister.cshtml" />
     <Content Include="Views\Page\RegisterOrg.cshtml" />
+    <Content Include="Views\Page\Verify.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
