--- a/Tabang-Hub/Tabang-Hub/bin/Tabang-Hub.dll.config
+++ b/Tabang-Hub/Tabang-Hub/bin/Tabang-Hub.dll.config
@@ -13,6 +13,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+	  <add key="MailSender" value="tabanghub@gmail.com"/>
+	  <add key="MailSenderAppPassword" value="rmrz yled ergt rwoj"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
