--- a/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
+++ b/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
@@ -137,7 +137,16 @@
       <DependentUpon>ModelTabangHub.edmx</DependentUpon>
     </Compile>
     <Compile Include="MyRole.cs" />
+    <Compile Include="OrgEventImage.cs">
+      <DependentUpon>ModelTabangHub.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OrgEvents.cs">
+      <DependentUpon>ModelTabangHub.tt</DependentUpon>
+    </Compile>
     <Compile Include="OrgInfo.cs">
+      <DependentUpon>ModelTabangHub.tt</DependentUpon>
+    </Compile>
+    <Compile Include="OrgSkillRequirement.cs">
       <DependentUpon>ModelTabangHub.tt</DependentUpon>
     </Compile>
     <Compile Include="OrgValidation.cs">
@@ -149,6 +158,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\MailManager.cs" />
+    <Compile Include="Repository\OrganizationManager.cs" />
     <Compile Include="Repository\UserManager.cs" />
     <Compile Include="Role.cs">
       <DependentUpon>ModelTabangHub.tt</DependentUpon>
@@ -162,6 +172,7 @@
     <Compile Include="UserRoles.cs">
       <DependentUpon>ModelTabangHub.tt</DependentUpon>
     </Compile>
+    <Compile Include="Utils\Lists.cs" />
     <Compile Include="Utils\Utilities.cs" />
     <Compile Include="VolunteerInfo.cs">
       <DependentUpon>ModelTabangHub.tt</DependentUpon>
