--- a/Tabang-Hub/Tabang-Hub/Web.config
+++ b/Tabang-Hub/Tabang-Hub/Web.config
@@ -14,8 +14,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-	  <add key="MailSender" value="tabanghub@gmail.com"/>
-	  <add key="MailSenderAppPassword" value="rmrz yled ergt rwoj"/>
+	  <add key="MailSender" value="tabanghub@gmail.com" />
+	  <add key="MailSenderAppPassword" value="rmrz yled ergt rwoj" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -56,8 +56,9 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="TabangHubEntities" connectionString="metadata=res://*/ModelTabangHub.csdl|res://*/ModelTabangHub.ssdl|res://*/ModelTabangHub.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=TabangHub;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+	  
+  <add name="TabangHubEntities" connectionString="metadata=res://*/ModelTabangHub.csdl|res://*/ModelTabangHub.ssdl|res://*/ModelTabangHub.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS02;initial catalog=TabangHub;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
