Done Edit profile

--- a/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
+++ b/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
@@ -209,6 +209,7 @@
     <Content Include="Views\Organization\DonationsManagement.cshtml" />
     <Content Include="Views\Organization\ReportsManagement.cshtml" />
     <Content Include="Views\Organization\Details.cshtml" />
+    <Content Include="Views\Organization\OrgProfile.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
