--- a/Tabang-Hub/Tabang-Hub/bin/Tabang-Hub.dll.config
+++ b/Tabang-Hub/Tabang-Hub/bin/Tabang-Hub.dll.config
@@ -58,7 +58,7 @@
 	<connectionStrings>
 
 
-	<add name="TabangHubEntities" connectionString="metadata=res://*/ModelTabangHub.csdl|res://*/ModelTabangHub.ssdl|res://*/ModelTabangHub.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=TabangHub;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+	<add name="TabangHubEntities" connectionString="metadata=res://*/ModelTabangHub.csdl|res://*/ModelTabangHub.ssdl|res://*/ModelTabangHub.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS02;initial catalog=TabangHub;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
