--- a/Tabang-Hub/Tabang-Hub/packages.config
+++ b/Tabang-Hub/Tabang-Hub/packages.config
@@ -6,4 +6,5 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net472" />
+  <package id="VS2012-Javascript-Intellisense" version="1.0.712.2147" targetFramework="net472" />
 </packages>
