--- a/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
+++ b/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
@@ -104,6 +104,18 @@
     <Content Include="Content\css1\pages\error.css" />
     <Content Include="Content\css1\widgets\chat.css" />
     <Content Include="Content\css1\widgets\todo.css" />
+    <Content Include="Content\css2\CustomeStyle.css" />
+    <Content Include="Content\css2\generalskill.css" />
+    <Content Include="Content\css2\generalStyle.css" />
+    <Content Include="Content\css2\message.css" />
+    <Content Include="Content\css2\opportunityCarousel.css" />
+    <Content Include="Content\css2\Participate.css" />
+    <Content Include="Content\css2\popup.css" />
+    <Content Include="Content\css2\progress.css" />
+    <Content Include="Content\css2\Style.css" />
+    <Content Include="Content\css2\Template-css\bootstrap-icons.css" />
+    <Content Include="Content\css2\Template-css\bootstrap.min.css" />
+    <Content Include="Content\css2\Template-css\templatemo-kind-heart-charity.css" />
     <Content Include="Content\Css\CustomeStyle.css" />
     <Content Include="Content\Css\generalskill.css" />
     <Content Include="Content\Css\generalStyle.css" />
@@ -138,6 +150,38 @@
     <Content Include="Content\images1\samples\motorcycle.jpg" />
     <Content Include="Content\images1\samples\origami.jpg" />
     <Content Include="Content\images1\samples\water.jpg" />
+    <Content Include="Content\images2\avatar\portrait-beautiful-young-woman-standing-grey-wall.jpg" />
+    <Content Include="Content\images2\avatar\portrait-young-beautiful-woman-gesticulating.jpg" />
+    <Content Include="Content\images2\avatar\portrait-young-redhead-bearded-male.jpg" />
+    <Content Include="Content\images2\avatar\pretty-blonde-woman-wearing-white-t-shirt.jpg" />
+    <Content Include="Content\images2\avatar\studio-portrait-emotional-happy-funny.jpg" />
+    <Content Include="Content\images2\causes\african-woman-pouring-water-recipient-outdoors.jpg" />
+    <Content Include="Content\images2\causes\Basak.jpg" />
+    <Content Include="Content\images2\causes\Feeding.jpg" />
+    <Content Include="Content\images2\causes\group-african-kids-paying-attention-class.jpg" />
+    <Content Include="Content\images2\causes\poor-child-landfill-looks-forward-with-hope.jpg" />
+    <Content Include="Content\images2\causes\power-of-red-cross.jpg" />
+    <Content Include="Content\images2\different-people-doing-volunteer-work.jpg" />
+    <Content Include="Content\images2\group-people-volunteering-foodbank-poor-people.jpg" />
+    <Content Include="Content\images2\icons\hands.png" />
+    <Content Include="Content\images2\icons\heart.png" />
+    <Content Include="Content\images2\icons\receive.png" />
+    <Content Include="Content\images2\icons\scholarship.png" />
+    <Content Include="Content\images2\logo.png" />
+    <Content Include="Content\images2\news\africa-humanitarian-aid-doctor.jpg" />
+    <Content Include="Content\images2\news\close-up-happy-people-working-together.jpg" />
+    <Content Include="Content\images2\news\close-up-volunteer-oganizing-stuff-donation.jpg" />
+    <Content Include="Content\images2\news\medium-shot-people-collecting-foodstuff.jpg" />
+    <Content Include="Content\images2\news\medium-shot-volunteers-with-clothing-donations.jpg" />
+    <Content Include="Content\images2\organization.png" />
+    <Content Include="Content\images2\portrait-volunteer-who-organized-donations-charity.jpg" />
+    <Content Include="Content\images2\slide\medium-shot-people-collecting-donations.jpg" />
+    <Content Include="Content\images2\slide\volunteer-helping-with-donation-box.jpg" />
+    <Content Include="Content\images2\slide\volunteer-selecting-organizing-clothes-donations-charity.jpg" />
+    <Content Include="Content\images2\smiling-casual-woman-dressed-volunteer-t-shirt-with-badge.jpg" />
+    <Content Include="Content\images2\tabanghub3-No-Background.png" />
+    <Content Include="Content\images2\tabanghub3.png" />
+    <Content Include="Content\images2\volunteer.png" />
     <Content Include="Content\images\organization.png" />
     <Content Include="Content\images\tabanghub3-removebg-preview.png" />
     <Content Include="Content\images\tabanghub3.png" />
@@ -153,6 +197,19 @@
     <Content Include="Content\js1\pages\ui-apexchart.js" />
     <Content Include="Content\js1\pages\ui-chartjs.js" />
     <Content Include="Content\js1\vendors.js" />
+    <Content Include="Content\Js2\JavaScript.js" />
+    <Content Include="Content\Js2\popup.js" />
+    <Content Include="Content\Js2\profile.js" />
+    <Content Include="Content\Js2\progress.js" />
+    <Content Include="Content\Js2\SaveDataInfo.js" />
+    <Content Include="Content\Js2\selectImage.js" />
+    <Content Include="Content\Js2\Template-js\bootstrap.min.js" />
+    <Content Include="Content\Js2\Template-js\click-scroll.js" />
+    <Content Include="Content\Js2\Template-js\counter.js" />
+    <Content Include="Content\Js2\Template-js\custom.js" />
+    <Content Include="Content\Js2\Template-js\jquery.min.js" />
+    <Content Include="Content\Js2\Template-js\jquery.sticky.js" />
+    <Content Include="Content\Js2\UserInfo.js" />
     <Content Include="Content\Js\JavaScript.js" />
     <Content Include="Content\Js\popup.js" />
     <Content Include="Content\Js\profile.js" />
