Recheck if naa pay usbon
Recheck if naa pay usbon

--- a/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
+++ b/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
@@ -1994,6 +1994,7 @@
     <Content Include="Views\Organization\Reports.cshtml" />
     <Content Include="Views\Organization\History.cshtml" />
     <Content Include="Views\Volunteer\OrganizationProfile.cshtml" />
+    <Content Include="Views\Shared\_Verify.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
