Continue admin reports

--- a/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
+++ b/Tabang-Hub/Tabang-Hub/Tabang-Hub.csproj
@@ -2068,6 +2068,7 @@
     <Content Include="Views\Volunteer\OrganizationProfile.cshtml" />
     <Content Include="Views\Shared\_Verify.cshtml" />
     <Content Include="Views\Admin\ManageSkill.cshtml" />
+    <Content Include="Views\Admin\Reports.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
