--- a/Tabang-Hub/Tabang-Hub/packages.config
+++ b/Tabang-Hub/Tabang-Hub/packages.config
@@ -4,6 +4,7 @@
   <package id="jQuery" version="1.6.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.4.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.3" targetFramework="net472" />
